# api/server.go
@@ -10,6 +10,7 @@ import (
 	"github.com/sunshineOfficial/golib/gohttp/gorouter"
 	"github.com/sunshineOfficial/golib/gohttp/gorouter/middleware"
 	"github.com/sunshineOfficial/golib/gohttp/gorouter/plugin"
+	"github.com/sunshineOfficial/golib/gohttp/gorouter/status"
 	"github.com/sunshineOfficial/golib/gohttp/goserver"
 	"github.com/sunshineOfficial/golib/golog"
 )
@@ -17,6 +18,7 @@ import (
 type ServerBuilder struct {
 	server goserver.Server
 	router *gorouter.Router
+	auth   gorouter.Middleware
 }
 
 func NewServerBuilder(ctx context.Context, log golog.Logger, settings config.Settings) *ServerBuilder {
@@ -27,6 +29,7 @@ func NewServerBuilder(ctx context.Context, log golog.Logger, settings config.Set
 			middleware.Recover,
 			middleware.LogError,
 		),
+		auth: middleware.IsAnyAuthorized(status.UnauthorizedHandler),
 	}
 }
 
@@ -36,10 +39,10 @@ func (s *ServerBuilder) AddDebug() {
 
 func (s *ServerBuilder) AddBrigades(service *brigade.Service) {
 	r := s.router.SubRouter("/brigades")
-	r.HandlePost("", handler.CreateBrigade(service))
+	r.HandlePost("", handler.CreateBrigade(service)).Use(s.auth)
 	r.HandleGet("/{id}", handler.GetBrigadeByID(service))
-	r.HandlePatch("/{id}/archive", handler.ArchiveBrigade(service))
-	r.HandleGet("", handler.GetAllBrigades(service))
+	r.HandlePatch("/{id}/archive", handler.ArchiveBrigade(service)).Use(s.auth)
+	r.HandleGet("", handler.GetAllBrigades(service)).Use(s.auth)
 }
 
 func (s *ServerBuilder) Build() goserver.Server {
